--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -48,5 +48,8 @@
     "plugins": [
       "@babel/plugin-transform-private-property-in-object"
     ]
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
